2002-06-24  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libc/include/ndbm.h: Remove.
	* libc/search/ndbm.c: Remove.

2002-06-24  WATANABE Hirofumi <eban@os.rim.or.jp>

	* libc/stdio/fseek.c (fseek): Fix braces.

2002-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* libc/time/strftime.c (strftime): Add %e format specifier.

2002-06-21  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libc/search/hash.h (LITTLE_ENDIAN, BIG_ENDIAN): Define if not
	previously defined.

2002-06-21  Richard Earnshaw  (rearnsha@arm.com)

        * libc/sys/arm/sys/param.h (BIG_ENDIAN, LITTLE_ENDIAN): Define.
        (BYTE_ORDER): Define as appropriate for the target.

2002-06-21  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/config.h[__linux__]: Set _READ_WRITE_RETURN_TYPE
	to _ssize_t.
	* libc/sys/linux/io.c (read, write): Change to return ssize_t.

2002-06-21  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdio.h (__getline, __getdelim): New prototypes.
	* libc/include/time.h [HAVE_GETDATE](getdate, getdate_r): Ditto.
	[HAVE_GETDATE](getdate_err): New error code.
	* libc/stdio/Makefile.am: Add support for getline.c and getdelim.c.
	* libc/stdio/Makefile.in: Regenerated.
	* libc/stdio/getdelim.c: New file.
	* libc/stdio/getline.c: Ditto.
	* libc/sys/linux/Makefile.am: Add support for getdate.c, getdate_err.c
	and ntp_gettime.c.  Also add AM_CFLAGS to point to libc/stdio.
	* libc/sys/linux/Makefile.in: Regenerated.
	* libc/sys/linux/getdate.c: New file.
	* libc/sys/linux/getdate_err.c: Ditto.
	* libc/sys/linux/ntp_gettime.c: Ditto.
	* libc/sys/linux/time.c (adjtimex, ntp_adjtime): New functions.
	* libc/sys/linux/sys/stdio.h (getline, getdelim): New macros.

2002-06-21  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/math.h: Add <sys/types.h> to get _uint32_t definition.
	* libc/include/machine/types.h: Skip __off_t, __pid_t, and
	__loff_t definitions if special _HAVE_SYSTYPES macro defined.
	* libc/include/sys/config.h: Removed _uint*, _int* definitions.